--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Υπενθύμιση απόρριψης",
     "CL_DV_RF_reminders": "Υπενθυμίσεις",
     "CL_DV_RF_x_hour_before_the_plan": "** ώρα πριν το σχέδιο",
-    "CL_DV_RF_delete_this_reminder": "Διαγράψτε αυτήν την υπενθύμιση"
+    "CL_DV_RF_delete_this_reminder": "Διαγράψτε αυτήν την υπενθύμιση",
+    "CL_DV_RF_ai_energy_saving_desc": "Βελτιστοποιήστε την κατάσταση λειτουργίας του ψυγείου για να επιτύχετε αποτελέσματα εξοικονόμησης ενέργειας. Το AI Energy Saving μπορεί να εξοικονομήσει την κατανάλωση ενέργειας του ψυγείου, αλλά θα μειώσει επίσης την ταχύτητα ψύξης.",
+    "CL_DV_RF_self_adaption_desc": "Σύμφωνα με τις συνήθειες χρήσης σας, η θερμοκρασία του δωματίου του ψυγείου θα ρυθμιστεί αυτόματα, έτσι ώστε η θερμοκρασία να είναι πιο σταθερή και το αποτέλεσμα συντήρησης να είναι καλύτερο.",
+    "CL_DV_RF_hi_nano_desc": "Σας επιτρέπει να ενεργοποιήσετε/απενεργοποιήσετε τη λειτουργία αποστείρωσης και απόσμησης ιόντων του ψυγείου σας.",
+    "CL_CF_CM_Paired_users": "ζευγαρωμένους χρήστες",
+    "CL_CF_CS_atw_cs_2": "Πατήστε το κουμπί Μενού για να εισέλθετε στη λίστα μενού.",
+    "CL_CF_CS_atw_cs_3": "Επιλέξτε WIFI και, στη συνέχεια, πατήστε το μεσαίο κουμπί για να ξεκινήσει η διαμόρφωση WIFI. Το σύμβολο WLAN θα αρχίσει τώρα να αναβοσβήνει.",
+    "CL_CF_CM_sun_rain_atw_name": "Αντλία θερμότητας ATW"
 }
