--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "תזכורת לסילוק",
     "CL_DV_RF_reminders": "תזכורות",
     "CL_DV_RF_x_hour_before_the_plan": "** שעה לפני התוכנית",
-    "CL_DV_RF_delete_this_reminder": "מחק את התזכורת הזו"
+    "CL_DV_RF_delete_this_reminder": "מחק את התזכורת הזו",
+    "CL_DV_RF_ai_energy_saving_desc": "ייעל את מצב ההפעלה של המקרר כדי להשיג אפקטים חיסכון באנרגיה. חיסכון באנרגיה AI יכול לחסוך בצריכת האנרגיה של המקרר, אך הוא גם יפחית את מהירות הקירור.",
+    "CL_DV_RF_self_adaption_desc": "בהתאם להרגלי השימוש שלך, הטמפרטורה של חדר המקרר תותאם אוטומטית, כך שהטמפרטורה תהיה יציבה יותר ואפקט השימור טוב יותר.",
+    "CL_DV_RF_hi_nano_desc": "מאפשר לך להפעיל/לכבות את המקרר שלך פונקציית עיקור יונים והפחתת ריח.",
+    "CL_CF_CM_Paired_users": "משתמשים מזווגים",
+    "CL_CF_CS_atw_cs_2": "לחץ על לחצן תפריט כדי להיכנס לרשימת התפריטים.",
+    "CL_CF_CS_atw_cs_3": "בחר WIFI ולאחר מכן לחץ על הלחצן האמצעי כדי להתחיל את תצורת ה-WIFI. סמל ה-WLAN יתחיל כעת להבהב.",
+    "CL_CF_CM_sun_rain_atw_name": "משאבת חום ATW"
 }
