--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "निपटान अनुस्मारक",
     "CL_DV_RF_reminders": "अनुस्मारक",
     "CL_DV_RF_x_hour_before_the_plan": "** योजना से एक घंटा पहले",
-    "CL_DV_RF_delete_this_reminder": "यह अनुस्मारक हटाएं"
+    "CL_DV_RF_delete_this_reminder": "यह अनुस्मारक हटाएं",
+    "CL_DV_RF_ai_energy_saving_desc": "ऊर्जा-बचत प्रभाव प्राप्त करने के लिए रेफ्रिजरेटर की परिचालन स्थिति को अनुकूलित करें। AI ऊर्जा बचत रेफ्रिजरेटर की ऊर्जा खपत को बचा सकती है, लेकिन यह ठंडा करने की गति को भी कम कर देगी।",
+    "CL_DV_RF_self_adaption_desc": "आपकी उपयोग की आदतों के अनुसार, फ्रिज के कमरे का तापमान स्वचालित रूप से समायोजित हो जाएगा, जिससे तापमान अधिक स्थिर होगा और संरक्षण प्रभाव बेहतर होगा।",
+    "CL_DV_RF_hi_nano_desc": "आपको अपने रेफ्रिजरेटर आयन नसबंदी और दुर्गन्धीकरण समारोह को चालू / बंद करने की अनुमति देता है।",
+    "CL_CF_CM_Paired_users": "युग्मित उपयोगकर्ता",
+    "CL_CF_CS_atw_cs_2": "मेनू सूची में प्रवेश करने के लिए मेनू बटन दबाएँ।",
+    "CL_CF_CS_atw_cs_3": "WIFI चुनें, फिर WIFI कॉन्फ़िगरेशन शुरू करने के लिए बीच वाला बटन दबाएँ। अब WLAN सिंबल चमकने लगेगा।",
+    "CL_CF_CM_sun_rain_atw_name": "एटीडब्लू हीट पंप"
 }
