--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Жою туралы еске салғыш",
     "CL_DV_RF_reminders": "Еске салғыштар",
     "CL_DV_RF_x_hour_before_the_plan": "** жоспардан сағат бұрын",
-    "CL_DV_RF_delete_this_reminder": "Бұл еске салғышты жойыңыз"
+    "CL_DV_RF_delete_this_reminder": "Бұл еске салғышты жойыңыз",
+    "CL_DV_RF_ai_energy_saving_desc": "Қуатты үнемдейтін әсерлерге қол жеткізу үшін тоңазытқыштың жұмыс күйін оңтайландырыңыз. AI Energy Saving тоңазытқыштың қуат тұтынуын үнемдей алады, бірақ ол салқындату жылдамдығын да азайтады.",
+    "CL_DV_RF_self_adaption_desc": "Пайдалану әдеттеріңізге сәйкес, тоңазытқыш бөлмесінің температурасы автоматты түрде реттеледі, осылайша температура тұрақтырақ және сақтау әсері жақсырақ болады.",
+    "CL_DV_RF_hi_nano_desc": "Тоңазытқышты ионды зарарсыздандыру және дезодорациялау функциясын қосуға/өшіруге мүмкіндік береді.",
+    "CL_CF_CM_Paired_users": "жұптастырылған пайдаланушылар",
+    "CL_CF_CS_atw_cs_2": "Мәзір тізіміне кіру үшін Мәзір түймесін басыңыз.",
+    "CL_CF_CS_atw_cs_3": "WIFI таңдап, WIFI конфигурациясын бастау үшін ортаңғы түймені басыңыз. WLAN белгісі енді жыпылықтай бастайды.",
+    "CL_CF_CM_sun_rain_atw_name": "ATW жылу сорғысы"
 }
