--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Напоминание об утилизации",
     "CL_DV_RF_reminders": "Напоминания",
     "CL_DV_RF_x_hour_before_the_plan": "** за час до плана",
-    "CL_DV_RF_delete_this_reminder": "Удалить это напоминание"
+    "CL_DV_RF_delete_this_reminder": "Удалить это напоминание",
+    "CL_DV_RF_ai_energy_saving_desc": "Оптимизируйте рабочее состояние холодильника для достижения эффекта энергосбережения. AI Energy Saving может сэкономить потребление энергии холодильником, но также снизит скорость охлаждения.",
+    "CL_DV_RF_self_adaption_desc": "В соответствии с вашими привычками использования температура в холодильной камере будет автоматически регулироваться, благодаря чему она будет более стабильной, а эффект сохранения продуктов — лучшим.",
+    "CL_DV_RF_hi_nano_desc": "Позволяет включать/выключать функцию ионной стерилизации и дезодорирования холодильника.",
+    "CL_CF_CM_Paired_users": "парные пользователи",
+    "CL_CF_CS_atw_cs_2": "Нажмите кнопку «Меню», чтобы войти в список меню.",
+    "CL_CF_CS_atw_cs_3": "Выберите WIFI, затем нажмите среднюю кнопку, чтобы начать настройку WIFI. Символ WLAN теперь начнет мигать.",
+    "CL_CF_CM_sun_rain_atw_name": "Тепловой насос ATW"
 }
