--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Подсетник за одлагање",
     "CL_DV_RF_reminders": "Подсетници",
     "CL_DV_RF_x_hour_before_the_plan": "** сат пре плана",
-    "CL_DV_RF_delete_this_reminder": "Избришите овај подсетник"
+    "CL_DV_RF_delete_this_reminder": "Избришите овај подсетник",
+    "CL_DV_RF_ai_energy_saving_desc": "Оптимизујте радни статус фрижидера да бисте постигли ефекте уштеде енергије. АИ Енерги Савинг може уштедети потрошњу енергије фрижидера, али ће такође смањити брзину хлађења.",
+    "CL_DV_RF_self_adaption_desc": "Према вашим навикама коришћења, температура у фрижидеру ће се аутоматски прилагодити, тако да је температура стабилнија и ефекат очувања бољи.",
+    "CL_DV_RF_hi_nano_desc": "Омогућава вам да укључите/искључите функцију јонске стерилизације и дезодорације у фрижидеру.",
+    "CL_CF_CM_Paired_users": "упарени корисници",
+    "CL_CF_CS_atw_cs_2": "Притисните дугме Мени да бисте ушли у листу менија.",
+    "CL_CF_CS_atw_cs_3": "Изаберите ВИФИ, а затим притисните средње дугме да бисте покренули ВИФИ конфигурацију. Симбол ВЛАН ће сада почети да трепери.",
+    "CL_CF_CM_sun_rain_atw_name": "АТВ топлотна пумпа"
 }
