--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Нагадування про утилізацію",
     "CL_DV_RF_reminders": "Нагадування",
     "CL_DV_RF_x_hour_before_the_plan": "** за годину до плану",
-    "CL_DV_RF_delete_this_reminder": "Видалити це нагадування"
+    "CL_DV_RF_delete_this_reminder": "Видалити це нагадування",
+    "CL_DV_RF_ai_energy_saving_desc": "Оптимізуйте режим роботи холодильника для досягнення ефекту енергозбереження. AI Energy Saving може заощадити енергоспоживання холодильника, але також зменшить швидкість охолодження.",
+    "CL_DV_RF_self_adaption_desc": "Відповідно до ваших звичок використання, температура в холодильній кімнаті буде автоматично регулюватися, щоб температура була стабільнішою, а ефект збереження кращим.",
+    "CL_DV_RF_hi_nano_desc": "Дозволяє вмикати/вимикати функцію іонної стерилізації та дезодорації вашого холодильника.",
+    "CL_CF_CM_Paired_users": "сполучених користувачів",
+    "CL_CF_CS_atw_cs_2": "Натисніть кнопку «Меню», щоб увійти до списку меню.",
+    "CL_CF_CS_atw_cs_3": "Виберіть WIFI, потім натисніть середню кнопку, щоб почати налаштування WIFI. Символ WLAN почне блимати.",
+    "CL_CF_CM_sun_rain_atw_name": "Тепловий насос ATW"
 }
