--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "تذكير بالتخلص من النفايات",
     "CL_DV_RF_reminders": "تذكيرات",
     "CL_DV_RF_x_hour_before_the_plan": "** قبل ساعة من الخطة",
-    "CL_DV_RF_delete_this_reminder": "حذف هذا التذكير"
+    "CL_DV_RF_delete_this_reminder": "حذف هذا التذكير",
+    "CL_DV_RF_ai_energy_saving_desc": "قم بتحسين حالة تشغيل الثلاجة لتحقيق تأثيرات توفير الطاقة. يمكن أن تعمل تقنية AI Energy Saving على توفير استهلاك الطاقة في الثلاجة، ولكنها ستقلل أيضًا من سرعة التبريد.",
+    "CL_DV_RF_self_adaption_desc": "وفقًا لعادات الاستخدام الخاصة بك، سيتم تعديل درجة حرارة غرفة الثلاجة تلقائيًا، بحيث تكون درجة الحرارة أكثر استقرارًا ويكون تأثير الحفظ أفضل.",
+    "CL_DV_RF_hi_nano_desc": "يتيح لك تشغيل/إيقاف وظيفة التعقيم وإزالة الروائح الكريهة من الثلاجة.",
+    "CL_CF_CM_Paired_users": "المستخدمين المقترنين",
+    "CL_CF_CS_atw_cs_2": "اضغط على زر القائمة للدخول إلى قائمة القائمة.",
+    "CL_CF_CS_atw_cs_3": "حدد WIFI، ثم اضغط على الزر الأوسط لبدء تكوين WIFI. سيبدأ رمز WLAN الآن في الوميض.",
+    "CL_CF_CM_sun_rain_atw_name": "مضخة الحرارة ATW"
 }
