--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Напомняне за изхвърляне",
     "CL_DV_RF_reminders": "Напомняния",
     "CL_DV_RF_x_hour_before_the_plan": "** час преди плана",
-    "CL_DV_RF_delete_this_reminder": "Изтрийте това напомняне"
+    "CL_DV_RF_delete_this_reminder": "Изтрийте това напомняне",
+    "CL_DV_RF_ai_energy_saving_desc": "Оптимизирайте работното състояние на хладилника, за да постигнете енергоспестяващи ефекти. AI Energy Saving може да спести консумацията на енергия на хладилника, но също така ще намали скоростта на охлаждане.",
+    "CL_DV_RF_self_adaption_desc": "Според вашите навици за използване, температурата на хладилното помещение ще се регулира автоматично, така че температурата да е по-стабилна и ефектът на запазване да е по-добър.",
+    "CL_DV_RF_hi_nano_desc": "Позволява ви да включвате/изключвате функцията за йонна стерилизация и дезодориране на вашия хладилник.",
+    "CL_CF_CM_Paired_users": "сдвоени потребители",
+    "CL_CF_CS_atw_cs_2": "Натиснете бутона Меню, за да влезете в списъка с менюта.",
+    "CL_CF_CS_atw_cs_3": "Изберете WIFI, след което натиснете средния бутон, за да започнете конфигурацията на WIFI. Символът WLAN ще започне да мига.",
+    "CL_CF_CM_sun_rain_atw_name": "Термопомпа ATW"
 }
