--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4380,5 +4380,12 @@
     "CL_DV_RF_disposal_reminder": "Påmindelse om bortskaffelse",
     "CL_DV_RF_reminders": "Påmindelser",
     "CL_DV_RF_x_hour_before_the_plan": "** time før planen",
-    "CL_DV_RF_delete_this_reminder": "Slet denne påmindelse"
+    "CL_DV_RF_delete_this_reminder": "Slet denne påmindelse",
+    "CL_DV_RF_ai_energy_saving_desc": "Optimer køleskabets driftsstatus for at opnå energibesparende effekter. AI Energy Saving kan spare køleskabets energiforbrug, men det vil også reducere kølehastigheden.",
+    "CL_DV_RF_self_adaption_desc": "I henhold til dine brugsvaner vil temperaturen i køleskabet automatisk blive justeret, så temperaturen er mere stabil og konserveringseffekten bedre.",
+    "CL_DV_RF_hi_nano_desc": "Giver dig mulighed for at tænde/slukke dit køleskab Ionsterilisering og deodoriseringsfunktion.",
+    "CL_CF_CM_Paired_users": "parrede brugere",
+    "CL_CF_CS_atw_cs_2": "Tryk på knappen Menu for at åbne menulisten.",
+    "CL_CF_CS_atw_cs_3": "Vælg WIFI, og tryk derefter på den midterste knap for at starte WIFI-konfigurationen. WLAN-symbolet begynder nu at blinke.",
+    "CL_CF_CM_sun_rain_atw_name": "ATW varmepumpe"
 }
